--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,10 @@
     <uses-sdk
         android:minSdkVersion="19"
         android:targetSdkVersion="21" />
-
+    
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
