--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,10 +7,11 @@
     <uses-sdk
         android:minSdkVersion="19"
         android:targetSdkVersion="21" />
-    
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
-    
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -25,6 +26,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".PlayServices"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
     </application>
 
 </manifest>
