--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/com/example/musicplayertest/MainActivity.java=UTF-8
+encoding//src/com/liushuan/MediaUtil/RoundImageView.java=UTF-8
 separateDerivedEncodings=true
