--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,7 @@
 >>>>>>>=0d9c8f5d53380db6bbdf86e75ed95bf23b7e0a89
 eclipse.preferences.version=1
 encoding//src/com/example/musicplayertest/MainActivity.java=UTF-8
+encoding//src/com/liushuan/MediaUtil/MediaUtil.java=UTF-8
 encoding//src/com/liushuan/MediaUtil/RoundImageView.java=UTF-8
 encoding/<project>=UTF-8
 separateDerivedEncodings=true
